Add frontent, devcontainer, readme, adjust data structure a bit
